# onboarding-mcp-server

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/apps/onboarding-mcp/: Dockerfile  cloudbuild.yaml  main.py  pyproject.toml  utils.py
src/apps/onboarding-mcp/tools/: addons.py  debug.py  groups.py  invoice_places.py  licenses.py  phone_numbers.py  queues.py  templates.py  users.py
src/libs/lib_logger/: README.md  pyproject.toml
src/libs/lib_logger/examples/: example.py  example_adapters.py  example_async.py  example_fastapi.py
src/libs/lib_logger/src/lib_logger/: __init__.py  config.py  core.py  interceptor.py
src/libs/lib_logger/src/lib_logger/adapters/: __init__.py  base.py  console.py  gcp.py  json.py
src/libs/lib_logger/tests/: test_adapters.py  test_async.py  test_integration.py  test_logger.py
