[project]
name = "lib-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gverdugo-g14", email = "gonzalo@galileo14.com" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
